--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "motion": "^12.23.22",
-    "next": "15.5.4",
+    "next": "^16.0.0",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
+    "toast": "^0.5.4",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
